2004-01-05  Terry <tbiggs@users.sf.net>

	* added check for ".sword/InstallMgr/InstallMgr.conf" in users home 
	  directory.
	

2004-01-05  Terry <tbiggs@users.sf.net>

	* added module manager
	  backend/module_mangger.cc
	  backend/module_mangger.hh
	  main/mod_mgr.c
	  main/mod_mgr.h
	  gnome2/mod_mgr.c
	  gui/mod_mgr.h


2004-01-02  Andy <andyp@users.sf.net>

	* updated some strings
	* cleaned up HTML output for generic book display
	

2003-12-31  Andy <andyp@users.sf.net>

	* update spec file
	* fix UI (menu item ordering and access keys per RFE #866127)
	* fix #include's of gal headers
	* string updates
	* preliminary support for GNOME session based on code from gedit


2003-12-31  Terry <tbiggs@users.sf.net>

	* remove pango markup from strings in bookmarks_menu.c and editor_menu.c


2003-12-30  Terry <tbiggs@users.sf.net>

	* fixed bug #866548
	* added space to navigation toolbar by adding empty labels
	

2003-12-26  Terry <tbiggs@users.sf.net>

	* added tooltips to all items on the navigation 
	  toolbar in toolbar_nav.c
	

2003-12-25  Terry <tbiggs@users.sf.net>

	* moved Spell.idl and spell_gnome_spell.c form /main to /gnome2
	* made some changes in spell dialog - spell check starts when the dialog 
	  opens - removed the spell check button (start buttton)


2003-12-24  Andy <andyp@users.sf.net>

	* bumped to version 2.0.0 (yay! a real stable release!)
	* added French manual (thanks to Dominique Corbex)
	* updated French translation
	* disabled out-of-date translations for GNOME2 build 
	  (only en_GB and fr_FR are current)
	* cleaned English manual
	* added screenshots for English manual


2003-12-23  Terry <tbiggs@users.sf.net>

	* added new sidebar menu button
	* cleand up the html.c code
	* changed <back> and <foward> buttons on nav toolbar to stock buttons


2003-12-21  Terry <tbiggs@users.sf.net>

	* fixed bug #863854 that I caused when I fixed to build with
	  -DGTK_DISABLE_DEPRECATED -- still builds with -DGTK_DISABLE_DEPRECATED
	  
